[package]
name = "blind-rsa-signatures"
version = "0.15.2"
authors = ["Frank Denis <github@pureftpd.org>"]
edition = "2018"
description = "RSA blind signatures in pure Rust"
readme = "README.md"
keywords = ["crypto", "rsa", "blind", "signatures"]
homepage = "https://github.com/jedisct1/rust-blind-rsa-signatures"
repository = "https://github.com/jedisct1/rust-blind-rsa-signatures"
categories = ["cryptography"]
license = "MIT"

[dependencies]
num-integer = "0.1.46"
num-traits = "0.2.19"
rand = "0.9.2"
rsa = { version = "0.9.9", features = ["hazmat"] }
digest = "0.10.7"
hmac-sha256 = { version = "1.1.12", features = ["traits010"] }
hmac-sha512 = { version = "1.1.7", features = ["traits010", "sha384"] }
derive-new = "0.7.0"
derive_more = { version = "2.0.1", features = ["full"] }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
criterion = "0.7"

[features]
default = ["serde"]
serde = ["dep:serde", "rsa/serde"]

[[bench]]
name = "speed_test"
harness = false
