[package]
name = "blind-rsa-signatures"
version = "0.17.1"
authors = ["Frank Denis <github@pureftpd.org>"]
edition = "2018"
description = "RSA blind signatures in pure Rust"
readme = "README.md"
keywords = ["crypto", "rsa", "blind", "signatures"]
homepage = "https://github.com/jedisct1/rust-blind-rsa-signatures"
repository = "https://github.com/jedisct1/rust-blind-rsa-signatures"
categories = ["cryptography"]
license = "MIT"

[dependencies]
rand = "0.10.0"
rand_core = "0.10.0"
rsa = { version = "0.10.0-rc.15", features = ["hazmat"] }
crypto-bigint = "0.7.0-rc.27"
crypto-primes = { version = "=0.7.0-pre.9", default-features = false }
digest = "0.11.0"
hmac-sha256 = { version = "1.1.13", features = ["traits011"] }
hmac-sha512 = { version = "1.1.12", features = ["traits011", "sha384"] }
ct-codecs = "1"
derive-new = "0.7.0"
derive_more = { version = "2.1.1", features = ["full"] }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
criterion = "0.8.2"
serde_json = "1"

[features]
default = ["serde"]
serde = ["dep:serde", "rsa/serde"]

[[bench]]
name = "speed_test"
harness = false
